[gd_scene load_steps=3 format=2]

[ext_resource path="res://gui/EventEditor.gd" type="Script" id=1]
[ext_resource path="res://fonts/heading.tres" type="DynamicFont" id=2]

[node name="EventEditor" type="CenterContainer"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1280, 720 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = 340.0
margin_top = 160.0
margin_right = 940.0
margin_bottom = 560.0
rect_min_size = Vector2( 600, 400 )

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 593.0
margin_bottom = 393.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
margin_right = 586.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 2 )
text = "Event Editor"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 35.0
margin_right = 586.0
margin_bottom = 55.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_top = 3.0
margin_right = 83.0
margin_bottom = 17.0
text = "Select event "

[node name="EventSelector" type="OptionButton" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 87.0
margin_right = 586.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Status" type="Label" parent="PanelContainer/VBoxContainer"]
margin_top = 59.0
margin_right = 586.0
margin_bottom = 73.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 77.0
margin_right = 586.0
margin_bottom = 304.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/ScrollContainer"]
margin_right = 586.0
size_flags_horizontal = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 308.0
margin_right = 586.0
margin_bottom = 328.0
size_flags_horizontal = 3

[node name="AddPropertyButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer3"]
margin_right = 95.0
margin_bottom = 20.0
text = "Add property"

[node name="PropertyList" type="OptionButton" parent="PanelContainer/VBoxContainer/HBoxContainer3"]
margin_left = 99.0
margin_right = 586.0
margin_bottom = 20.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 332.0
margin_right = 586.0
margin_bottom = 352.0
rect_min_size = Vector2( 0, 20 )

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 356.0
margin_right = 586.0
margin_bottom = 386.0
size_flags_horizontal = 3
custom_constants/separation = 30
alignment = 1

[node name="SaveButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
margin_left = 48.0
margin_right = 148.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 30 )
text = "Save"

[node name="PreviewButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
margin_left = 178.0
margin_right = 278.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 30 )
text = "Preview"

[node name="ActivateButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
margin_left = 308.0
margin_right = 408.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 30 )
text = "Activate"

[node name="DeleteButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
margin_left = 438.0
margin_right = 538.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 30 )
text = "Delete"
